# sams-industrial-ecosystem

./: .gitignore  LICENSE  README.md
cyber-monitor/: Cargo.toml  INTEGRATION_PLAN.md
cyber-monitor/src/: main.rs
sams-blackbox/: Cargo.toml  README.md
sams-blackbox/.cargo/: config.toml
sams-blackbox/src/: main.rs
sams-ghost-node/: Cargo.toml
sams-ghost-node/src/: main.rs
sams-logic-gate/: .gitignore  Cargo.toml  INTEGRATION.md  INTEGRATION_SLC.md  README.md  README_SLC.md
sams-logic-gate/.cargo/: config.toml
sams-logic-gate/src/: LICENSE_PROPRIETARY.md  common_types.rs  logic_controller.rs  logic_controller_old.rs  main.rs  mock_logic.rs  slc_core.rs
