[package]
name = "sams-logic-gate"
version = "0.1.0"
edition = "2024"
authors = ["Stanislav Levarsky"]
description = "SAMS Semantic Logic Controller - Professional middleware with hybrid open-source/proprietary architecture for Industry 4.0 semantic processing"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

[features]
default = ["open-source"]
open-source = []
closed-source = []
